add .java :  inflearn spring MVC1 chapter 3

--- a/강다현/servlet/src/main/webapp/index.html
+++ b/강다현/servlet/src/main/webapp/index.html
@@ -6,34 +6,78 @@
 </head>
 <body>
 <ul>
-    <li>hello 서블릿
+    <li><a href="basic.html">서블릿 basic</a></li>
+    <li>서블릿
         <ul>
-            <li><a href="/hello?username=servlet">hello 서블릿 호출</a></li>
+            <li><a href="/servlet/members/new-form">회원가입</a></li>
+            <li><a href="/servlet/members">회원목록</a></li>
         </ul>
     </li>
-    <li>HttpServletRequest
+    <li>JSP
         <ul>
-            <li><a href="/request-header">기본 사용법, Header 조회</a></li>
-            <li>HTTP 요청 메시지 바디 조회
-                <ul>
-                    <li><a href="/request-param?username=hello&age=20">GET - 쿼리
-                        파라미터</a></li>
-                    <li><a href="/basic/hello-form.html">POST - HTML Form</a></
-                    li>
-                    <li>HTTP API - MessageBody -> Postman 테스트</li>
-                </ul>
-            </li>
+            <li><a href="/jsp/members/new-form.jsp">회원가입</a></li>
+            <li><a href="/jsp/members.jsp">회원목록</a></li>
         </ul>
     </li>
-    <li>HttpServletResponse
+    <li>서블릿 MVC
         <ul>
-            <li><a href="/response-header">기본 사용법, Header 조회</a></li>
-            <li>HTTP 응답 메시지 바디 조회
-                <ul>
-                    <li><a href="/response-html">HTML 응답</a></li>
-                    <li><a href="/response-json">HTTP API JSON 응답</a></li>
-                </ul>
-            </li>
+            <li><a href="/servlet-mvc/members/new-form">회원가입</a></li>
+            <li><a href="/servlet-mvc/members">회원목록</a></li>
+        </ul>
+    </li>
+    <li>FrontController - v1
+        <ul>
+            <li><a href="/front-controller/v1/members/new-form">회원가입</a></li>
+            <li><a href="/front-controller/v1/members">회원목록</a></li>
+        </ul>
+    </li>
+    <li>FrontController - v2
+        <ul>
+            <li><a href="/front-controller/v2/members/new-form">회원가입</a></li>
+            <li><a href="/front-controller/v2/members">회원목록</a></li>
+        </ul>
+    </li>
+    <li>FrontController - v3
+        <ul>
+            <li><a href="/front-controller/v3/members/new-form">회원가입</a></li>
+            <li><a href="/front-controller/v3/members">회원목록</a></li>
+        </ul>
+    </li>
+    <li>FrontController - v4
+        <ul>
+            <li><a href="/front-controller/v4/members/new-form">회원가입</a></li>
+            <li><a href="/front-controller/v4/members">회원목록</a></li>
+        </ul>
+    </li>
+    <li>FrontController - v5 - v3
+        <ul>
+            <li><a href="/front-controller/v5/v3/members/new-form">회원가입</a></li>
+            <li><a href="/front-controller/v5/v3/members">회원목록</a></li>
+        </ul>
+    </li>
+    <li>FrontController - v5 - v4
+        <ul>
+            <li><a href="/front-controller/v5/v4/members/new-form">회원가입</a></li>
+            <li><a href="/front-controller/v5/v4/members">회원목록</a></li>
+        </ul>
+    </li>
+    <li>SpringMVC - v1
+        <ul>
+            <li><a href="/springmvc/v1/members/new-form">회원가입</a></li>
+            <li><a href="/springmvc/v1/members">회원목록</a></li>
+        </ul>
+    </li>
+    <li>SpringMVC - v2
+        <ul>
+            <li><a href="/springmvc/v2/members/new-form">회원가입</a></li>
+            <li><a href="/springmvc/v2/members">회원목록</a></li>
+
+        </ul>
+    </li>
+    <li>SpringMVC - v3
+        <ul>
+            <li><a href="/springmvc/v3/members/new-form">회원가입</a></li>
+            <li><a href="/springmvc/v3/members">회원목록</a></li>
         </ul>
     </li>
 </ul>
